--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -4,7 +4,7 @@
   margin-bottom: 50px;
   padding: $gutter;
 
-  background: rgba(#ffffff, 0.1);
+  background: rgba($white-color, 0.1);
 
   flex-wrap: wrap;
 }
